--- a/easyversion.html
+++ b/easyversion.html
@@ -20,6 +20,7 @@
         <div class="grade wgrade">2</div>
         <div class="title bgrade">黑棋</div>
         <div class="title wgrade">白棋</div>
+        <div class="AIgrade">電腦戰績:0勝0負0和&nbsp;&nbsp;勝率:0%</div>
         <button type="button" onclick="whitefirst();" class="btn bwhite">後手</button>
         <button type="button" onclick="blackfirst();" class="btn bblack">先手</button>
         <button type="button" onclick="reload();" class="btn reload">New Game</button>
