--- a/hardversion.html
+++ b/hardversion.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>黑白棋</title>
     <meta name="keywords" content="homepage">
-<!--    <meta name="viewpoint" content="width=device-width, inital-scale=0.75,maximum-scale=1.0, user-scalable=0">-->
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="final.css">
 </head>
@@ -20,10 +19,12 @@
         <div class="grade wgrade">2</div>
         <div class="title bgrade">黑棋</div>
         <div class="title wgrade">白棋</div>
-        <div class="AIgrade">電腦戰績:0勝0負0和&nbsp;&nbsp;勝率:0%</div>
+        <div class="AIgrade"></div>
         <button type="button" onclick="whitefirst();" class="btn bwhite">後手</button>
         <button type="button" onclick="blackfirst();" class="btn bblack">先手</button>
         <button type="button" onclick="reload();" class="btn reload">New Game</button>
+        <button type="button" onclick="surrender();" class="btn surrender" style="display: none">認輸</button>
+
         <div class="banner"></div>
     </div>
     <script type="text/javascript" src="hardversion.js"></script>
